@@ -8,8 +8,6 @@ import net.migueel26.faunaandorchestra.util.RecipesUtil;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
-import net.minecraft.core.component.DataComponentMap;
-import net.minecraft.core.component.DataComponents;
 import net.minecraft.core.particles.ParticleType;
 import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.core.particles.SimpleParticleType;
@@ -24,14 +22,17 @@ import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
-import net.minecraft.world.item.component.ItemContainerContents;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.CampfireBlock;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import software.bernie.geckolib.animatable.GeoBlockEntity;
-import software.bernie.geckolib.animatable.instance.AnimatableInstanceCache;
-import software.bernie.geckolib.animation.*;
+import software.bernie.geckolib.core.animatable.instance.AnimatableInstanceCache;
+import software.bernie.geckolib.core.animation.AnimatableManager;
+import software.bernie.geckolib.core.animation.AnimationController;
+import software.bernie.geckolib.core.animation.AnimationState;
+import software.bernie.geckolib.core.animation.RawAnimation;
+import software.bernie.geckolib.core.object.PlayState;
 import software.bernie.geckolib.util.GeckoLibUtil;
 
 import javax.annotation.Nullable;
@@ -69,25 +70,27 @@ public class MelomancyCauldronBlockEntity extends BlockEntity implements GeoBloc
     public boolean addIngredient(Player player, ItemStack originalStack, InteractionHand usedHand) {
         int i = 0;
         boolean found = false;
+        ItemStack newIngredient =  originalStack.copy();
+        newIngredient.setCount(1);
+
         while (i < ingredients.size() && !found) {
             ItemStack itemStack = ingredients.get(i);
             if (itemStack.is(originalStack.getItem())) {
                 // It's already placed, so we increment by 1
                 itemStack.setCount(itemStack.getCount() + 1);
                 ingredients.set(i, itemStack);
-                if (originalStack.is(Items.LAVA_BUCKET) || originalStack.is(Items.WATER_BUCKET) || originalStack.is(Items.POWDER_SNOW_BUCKET)) {
-                    player.setItemInHand(usedHand, Items.BUCKET.getDefaultInstance());
-                }
-                originalStack.consume(1, player);
+
+                // We return the item leftover
+                handlePlayerCost(player, usedHand, originalStack);
+
                 found = true;
                 triggerAnim("melomancy_cauldron_controller", "mix");
                 this.markUpdated();
             } else if (itemStack.isEmpty()) {
-                // It's not placed, so we introduce it
-                if (originalStack.is(Items.LAVA_BUCKET) || originalStack.is(Items.WATER_BUCKET) || originalStack.is(Items.POWDER_SNOW_BUCKET)) {
-                    player.setItemInHand(usedHand, Items.BUCKET.getDefaultInstance());
-                }
-                this.ingredients.set(i, originalStack.consumeAndReturn(1, player));
+                this.ingredients.set(i, newIngredient);
+
+                handlePlayerCost(player, usedHand, originalStack);
+
                 found = true;
                 triggerAnim("melomancy_cauldron_controller", "mix");
                 this.markUpdated();
@@ -96,6 +99,16 @@ public class MelomancyCauldronBlockEntity extends BlockEntity implements GeoBloc
         }
 
         return found;
+    }
+
+    private void handlePlayerCost(Player player, InteractionHand hand, ItemStack originalStack) {
+        if (originalStack.hasCraftingRemainingItem()) {
+            player.setItemInHand(hand, originalStack.getCraftingRemainingItem());
+        } else {
+            if (!player.getAbilities().instabuild) {
+                originalStack.shrink(1);
+            }
+        }
     }
 
     public static void cookTick(Level level, BlockPos pos, BlockState state, MelomancyCauldronBlockEntity blockEntity) {
@@ -146,7 +159,7 @@ public class MelomancyCauldronBlockEntity extends BlockEntity implements GeoBloc
     }
 
     public boolean cook() {
-        if (!ingredients.getFirst().isEmpty() && !this.isCooking()) {
+        if (!ingredients.get(0).isEmpty() && !this.isCooking()) {
             this.cookTime = DEFAULT_COOK_TIME;
             return true;
         } else {
@@ -163,9 +176,9 @@ public class MelomancyCauldronBlockEntity extends BlockEntity implements GeoBloc
     }
 
     @Override
-    protected void loadAdditional(CompoundTag tag, HolderLookup.Provider registries) {
-        super.loadAdditional(tag, registries);
-        ContainerHelper.loadAllItems(tag, this.ingredients, registries);
+    public void load(CompoundTag tag) {
+        super.load(tag);
+        ContainerHelper.loadAllItems(tag, this.ingredients);
         if (tag.contains("CookTime")) {
             this.cookTime = tag.getInt("CookTime");
         }
@@ -176,9 +189,9 @@ public class MelomancyCauldronBlockEntity extends BlockEntity implements GeoBloc
     }
 
     @Override
-    protected void saveAdditional(CompoundTag tag, HolderLookup.Provider registries) {
-        super.saveAdditional(tag, registries);
-        ContainerHelper.saveAllItems(tag, this.ingredients, true, registries);
+    public void saveAdditional(CompoundTag tag) {
+        super.saveAdditional(tag);
+        ContainerHelper.saveAllItems(tag, this.ingredients, true);
         tag.putInt("CookTime", cookTime);
         tag.putString("MixResult", mixResult);
     }
@@ -188,23 +201,12 @@ public class MelomancyCauldronBlockEntity extends BlockEntity implements GeoBloc
     }
 
     @Override
-    public CompoundTag getUpdateTag(HolderLookup.Provider registries) {
+    public CompoundTag getUpdateTag() {
         CompoundTag compoundTag = new CompoundTag();
-        ContainerHelper.saveAllItems(compoundTag, this.ingredients, true, registries);
+        ContainerHelper.saveAllItems(compoundTag, this.ingredients, true);
         compoundTag.putInt("CookTime", this.cookTime);
         compoundTag.putString("MixResult", this.mixResult);
         return compoundTag;
-    }
-    @Override
-    protected void applyImplicitComponents(BlockEntity.DataComponentInput componentInput) {
-        super.applyImplicitComponents(componentInput);
-        componentInput.getOrDefault(DataComponents.CONTAINER, ItemContainerContents.EMPTY).copyInto(this.getIngredients());
-    }
-
-    @Override
-    protected void collectImplicitComponents(DataComponentMap.Builder components) {
-        super.collectImplicitComponents(components);
-        components.set(DataComponents.CONTAINER, ItemContainerContents.fromItems(this.getIngredients()));
     }
 
     private void markUpdated() {
